# TurkishNamedEntityRecognition-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: GazetteerTest.c  NerCorpusTest.c  SlotTest.c
src/: CMakeLists.txt  Gazetteer.c  Gazetteer.h  NamedEntitySentence.c  NamedEntitySentence.h  NamedEntityType.c  NamedEntityType.h  NamedEntityWord.c  NamedEntityWord.h  NerCorpus.c  NerCorpus.h  Slot.c  Slot.h  SlotType.h
