cmake_minimum_required(VERSION 3.23)
project(NamedEntityRecognition)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_FLAGS "-O3")

find_package(corpus_c REQUIRED)

add_library(NamedEntityRecognition src/SlotType.h src/NamedEntityType.h src/Slot.c src/Slot.h src/Gazetteer.c src/Gazetteer.h src/NamedEntityWord.c src/NamedEntityWord.h src/NamedEntitySentence.c src/NamedEntitySentence.h src/NamedEntityType.c src/NerCorpus.c src/NerCorpus.h)
target_link_libraries(NamedEntityRecognition corpus_c::corpus_c)
add_executable(SlotTest src/SlotType.h src/NamedEntityType.h src/Slot.c src/Slot.h src/Gazetteer.c src/Gazetteer.h src/NamedEntityWord.c src/NamedEntityWord.h src/NamedEntitySentence.c src/NamedEntitySentence.h src/NamedEntityType.c Test/SlotTest.c)
target_link_libraries(SlotTest corpus_c::corpus_c)
add_executable(GazetteerTest src/SlotType.h src/NamedEntityType.h src/Slot.c src/Slot.h src/Gazetteer.c src/Gazetteer.h src/NamedEntityWord.c src/NamedEntityWord.h src/NamedEntitySentence.c src/NamedEntitySentence.h src/NamedEntityType.c src/NerCorpus.c src/NerCorpus.h Test/GazetteerTest.c)
target_link_libraries(GazetteerTest corpus_c::corpus_c)
add_executable(NerCorpusTest src/SlotType.h src/NamedEntityType.h src/Slot.c src/Slot.h src/Gazetteer.c src/Gazetteer.h src/NamedEntityWord.c src/NamedEntityWord.h src/NamedEntitySentence.c src/NamedEntitySentence.h src/NamedEntityType.c src/NerCorpus.c src/NerCorpus.h Test/NerCorpusTest.c)
target_link_libraries(NerCorpusTest corpus_c::corpus_c)
